--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "babel-eslint": "^10.0.1",
     "husky": "^1.1.4",
     "lint-staged": "^8.0.4",
     "prettier": "^1.15.2"
