--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,css}": [
+    "**/*.{js,css,json}": [
       "./node_modules/.bin/prettier --write",
       "git add"
     ]
